--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>John Doe | Home</title>
+    <title>Vansh Dhillon | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+    <meta name="keywords" content="Die with Memories, not Dreams ." ~ V@n$h." />
+    <meta name="description" content=""Die with Memories, not Dreams ." ~ V@n$h." />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
@@ -15,11 +15,11 @@
     <meta property="og:title" content="John Doe | Home">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
+    <meta property="og:url" content="https://vanshdhillon.ml">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="twitter:site" content="https://vanshdhillon.ml">
+    <meta name="application-name" content="V@n$h | Home" />
+    <meta name="apple-mobile-web-app-title" content="V@n$h | Home" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
