--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="John Doe | Home">
-    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+    <meta property="og:site_name" content="https://vanshdhillon.ml">
+    <meta property="og:title" content="Vansh Dhillon | Home">
+    <meta property="og:description" content="Die with Memories, not Dreams ." ~ V@n$h.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vanshdhillon.ml">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://vanshdhillon.ml">
-    <meta name="application-name" content="V@n$h | Home" />
-    <meta name="apple-mobile-web-app-title" content="V@n$h | Home" />
-    <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+    <meta name="application-name" content="Vansh Dhillon | Home" />
+    <meta name="apple-mobile-web-app-title" content="Vansh Dhillon | Home" />
+    <meta name="summary" content="Die with Memories, not Dreams ." ~ V@n$h." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <!--Import Google Icon Font-->
@@ -74,7 +74,7 @@
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                    data-words="Web Designing, UI/UX, Cloud Computing, Open Source Contribution!"></span>
                 </span>
                 <div>
                     <div class="social-icons">
